--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,3 +1,24 @@
-<p>
-  welcome-page works!
-</p>
+<div class="welcomePage-background">
+    <div class="welcomePage-content-container">
+        <div class="welcomePage-paragraph-form-container">
+            <div class="welcomePage-paragraph">
+                <div class="font-title welcomePage-title">Send your satellite in space !</div>
+                <div class="font-subtitle"></div>
+                <div class="welcomePage-text">
+                    Haec subinde Constantius audiens et quaedam 
+                    referente Thalassio doctus, quem eum odisse 
+                    iam conpererat lege communi, scribens ad Caesarem 
+                    blandius adiumenta paulatim illi subtraxit, sollicitari 
+                    se simulans ne, uti est militare otium fere tumultuosum, 
+                    in eius perniciem conspiraret, solisque scholis iussit 
+                    esse contentum palatinis et protectorum cum Scutariis 
+                    et Gentilibus, et mandabat
+                </div>
+            </div>
+            <div class="welcomePage-form">
+            </div>
+        </div>
+    </div>
+    <div class="welcomePage-image-container">
+    </div>
+</div>
