WelcomePage first done

--- a/src/app/welcome-page/welcome-page.component.css
+++ b/src/app/welcome-page/welcome-page.component.css
@@ -1,18 +1,28 @@
-.welcomePage-background {
+#welcomePage-background {
     width: 100%;
     min-height: 100%;
-    background-color: #a3c4e2;
-    display: flex;  
+    display: flex;
+    align-items: center;  
 }
 
-@media screen and (min-width:480px){
-    .welcomePage-background {
+.welcomePage-background-new {
+    background-color: #a5c4e1;
+    transition: 1s;
+}
+
+.welcomePage-background-login {
+    background-color: #1D1D2D;
+    transition: 1s;
+}
+
+@media screen and (min-width:720px){
+    #welcomePage-background {
         flex-direction: row;
         justify-content: space-between;
     }
 }
-@media screen and (max-width:480px){
-    .welcomePage-background {
+@media screen and (max-width:720px){
+    #welcomePage-background {
         flex-direction: column;
     }
 }
@@ -23,26 +33,21 @@
 
 .welcomePage-content-container {
     min-height: 100%;
-    margin-left: 10%;
     display: flex;
     align-items: center;
 }
 
-@media screen and (min-width:959px){
+@media screen and (min-width:720px) {
     .welcomePage-content-container {
         width: 40%;
+        margin-left: 10%;
     }
 }
 
-@media screen and (min-width:480px) and (max-width:959px) {
+@media screen and (max-width:720px){
     .welcomePage-content-container {
-        width: 50%;
-    }
-}
-
-@media screen and (max-width:480px){
-    .welcomePage-content-container {
-        margin-top:8em;
+        padding-top:5em;
+        margin: 0 auto;
         width: 80%;
     }
 }
@@ -65,39 +70,56 @@
 
 .welcomePage-form {
     width: 100%;
+    margin-top:3em;
 }
 
 /* ------ Image ------ */
 
-.welcomePage-image-container {
-    height: 40em;
-    background-image: url(./WelcomePageBackgrounds/Accueil_Background1.png);
+#welcomePage-image-container {
+    
     background-repeat: no-repeat;
-    background-position: bottom;
-    align-self: flex-end;
-    transition:0.3s;
 }
 
+.welcomePage-image-container1 {
+    height: 40em;
+    width: 20em;
+    align-self: flex-end;
+    background-position: bottom;
+}
+
+.welcomePage-image-container1-1 {background-image: url(./WelcomePageBackgrounds/Accueil_Background1.png);}
+.welcomePage-image-container1-2 {background-image: url(./WelcomePageBackgrounds/Accueil_Background2.png);}
+.welcomePage-image-container1-3 { background-image: url(./WelcomePageBackgrounds/Accueil_Background3.png);}
+.welcomePage-image-container1-4 {background-image: url(./WelcomePageBackgrounds/Accueil_Background4.png);}
+.welcomePage-image-container1-5 { background-image: url(./WelcomePageBackgrounds/Accueil_Background5.png);}
+
+.welcomePage-image-container2 {
+    height: 20em;
+    width: 20em;
+    padding-bottom:20em;
+    background-image: url(./WelcomePageBackgrounds/Logo.png);
+    background-position: center;
+}
+
+
+
 @media screen and (min-width:959px){
-    .welcomePage-image-container {
-        margin-right: 17%;
-        width: 20em;
+    #welcomePage-image-container {
+        margin-right: 15%;
         background-size: 18em;
     }
 }
 
-@media screen and (min-width:480px) and (max-width:959px){
-    .welcomePage-image-container {
+@media screen and (min-width:720px) and (max-width:959px){
+    #welcomePage-image-container {
         margin-right: 10%;
-        width: 20em;
         background-size: 16em;
     }
 }
 
-@media screen and (max-width:480px){
-    .welcomePage-image-container { 
+@media screen and (max-width:720px){
+    #welcomePage-image-container { 
         margin: 0 auto;
-        width: 20em;
         background-size: 18em;
         
     }
