--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,9 +1,7 @@
-<div class="welcomePage-background">
+<div id="welcomePage-background" class="welcomePage-background-new">
     <div class="welcomePage-content-container">
         <div class="welcomePage-paragraph-form-container">
             <div class="welcomePage-paragraph">
-                <div class="font-title welcomePage-title">Send your satellite in space !</div>
-                <div class="font-subtitle"></div>
                 <div class="welcomePage-text">
                     Haec subinde Constantius audiens et quaedam 
                     referente Thalassio doctus, quem eum odisse 
@@ -16,9 +14,10 @@
                 </div>
             </div>
             <div class="welcomePage-form">
+                <connect-form></connect-form>
             </div>
         </div>
     </div>
-    <div class="welcomePage-image-container">
+    <div id="welcomePage-image-container" class="welcomePage-image-container1 welcomePage-image-container1-1">
     </div>
 </div>
