--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,6 @@
+/* Bootstrap */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+/* Page principale */
 html, body {
     height: 100%;
     margin: 0;
