--- a/src/app/recompense-moon/recompense-moon.component.html
+++ b/src/app/recompense-moon/recompense-moon.component.html
@@ -1,6 +1,6 @@
 <body class="container-fluid pageSize no-gutters" >
   <div class="row">
-    <div class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture">Espace image planete
+    <div class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture">
     </div>
     <div class="col-12 col-sm-12 col-md-6 order-md-2 zoneText">
       <div class="row">
@@ -11,7 +11,16 @@
           </div>
       </div>
       <div class="row">
-          <div class=" font-subtitle offset-1 col-10"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="font-subtitle offset-1 col-10"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
+      </div>
+      <div class="row">
+          <div class="font-subtitle offset-1 col-10">
+            <p>Donnée : 2566252556°</p>
+            <p>Donnée : 2566252556°</p>
+            <p>Donnée : 2566252556°</p>
+            <p>Donnée : 2566252556°</p>
+            <p>Donnée : 2566252556°</p>
           </div>
       </div>
     </div>
@@ -19,17 +28,21 @@
   <div class="row">
     <div class="  col-12 col-sm-12 col-md-6">
       <div class="row">
-        <div class="  col-6 col-sm-3 col-md-3 minPicture">Image noumbeur 1
+        <div class="col-6 col-sm-6 col-md-3 minPicture thumb1">
         </div>
-        <div class="  col-6 col-sm-3 col-md-3 minPicture">Image noumbeur 2
+        <div class="col-6 col-sm-6 col-md-3 minPicture thumb2">
         </div>  
-        <div class="  col-6 col-sm-3 col-md-3 minPicture">Image noumbeur 3
+        <div class="col-6 col-sm-6 col-md-3 minPicture thumb3">
         </div> 
-        <div class="  col-6 col-sm-3 col-md-3 minPicture">Image noumbeur 4
+        <div class="col-6 col-sm-6 col-md-3 minPicture thumb4">
         </div>
       </div>
       </div>
-      <div class="  col-12 col-sm-12 col-md-6 zoneContinue">Bouton continue
-    </div>
+      <div class="col-12 col-sm-12 col-md-6 zoneContinue">
+        <div class="row">
+          <div class="col-sm-12 offset-md-5 col-md-5 offset-lg-7 col-lg-5 font-title continueButtom"><H5 style="white-space: nowrap;">CONTINUE <span class="continueArrow">▶</span></H5>
+          </div>
+        </div>
+      </div>
   </div>
 </body>
