page Niveau1 terminée

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,42 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+html, body {
+    height: 100%;
+    margin: 0;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+
+/* fonts */
+
+.font-title {
+    font-family: 'Libre Franklin', sans-serif;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 0.04rem;
+    margin-bottom: 0.5rem;
+}
+
+.font-subtitle {
+    font-family: 'Libre Franklin', sans-serif;
+    text-transform: uppercase;
+    font-size: 0.64rem;
+    letter-spacing: 0.05rem;
+    font-weight: 500;
+}
+
+
+
+* {
+    font-family: 'Roboto Mono', monospace;
+    font-size: 0.5rem;
+    font-weight: 300;
+}
+
+.hidden {
+    display: none;
+    width: Opx;
+    height: Opx;
+}
