Page Tableau de Bord v 1.0

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,8 @@ html, body {
     margin: 0;
     font-size: 1.5rem;
     font-weight: 400;
+
+    overflow-y: hidden;
 }
 
 
@@ -38,3 +40,4 @@ html, body {
     width: Opx;
     height: Opx;
 }
+
