Before presentation 12/08/2018 Correction

--- a/src/app/connect-form/connect-form.component.css
+++ b/src/app/connect-form/connect-form.component.css
@@ -20,6 +20,7 @@
 }
 
 .WelcomePage-Forms-choice  > p {
+    margin-top:10%;
     color: #fff;
 }
 
@@ -87,7 +88,7 @@
 }
 
 .welcomePage-Form > input {
-    width: 94%;
+    width: 100%;
     height: 2.6em;
     margin-top: 0.5em;
     padding-left: 3%;
