--- a/src/app/niveau1-page/niveau1-page.component.html
+++ b/src/app/niveau1-page/niveau1-page.component.html
@@ -24,8 +24,8 @@
                     <div id="AfficherReponse" class="col-12 col-md-12 hidden">
                         <div class="col-12 col-md-12 col-lg-12 d-flex justify-content-center mb-4 titlecolor pt-4 font-subtitle">Well done!
                         </div> 
-                            <div id="boutongetyourreward" routerLink="recompenseLune" class="col-12 col-md-12 col-lg-6 offset-lg-3 d-flex justify-content-center mb-4">
-                                <a class="encrelune" href="#lune">
+                            <div id="boutongetyourreward"  class="col-12 col-md-12 col-lg-6 offset-lg-3 d-flex justify-content-center mb-4">
+                                <a class="encrelune" href="#recompense-lune">
                                 <button type="button" class="btn bgcolor d-flex justify-content-center btn-block font-weight-bold fontbuttonsize font-subtitle">Get your reward</button>
                             </a>
                             </div>
@@ -34,6 +34,4 @@
             </div>
     </div>
 </div>
-<!-- <a href="#/home" class="active">Home</a> -->
-<router-outlet id = "lune" class="active"></router-outlet> 
-<!-- <app-recompense-moon id ="recompenseLune" class="hidden"></app-recompense-moon> -->
+<app-recompense-moon id="recompense-lune" class="hidden"></app-recompense-moon>
