--- a/src/app/recompense-moon/recompense-moon.component.html
+++ b/src/app/recompense-moon/recompense-moon.component.html
@@ -1,4 +1,4 @@
-<body id="" class="container-fluid pageSize no-gutters" >
+<div id="" class="container-fluid pageSize no-gutters" >
   <div id="" class="row">
     <div class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture">
     </div>
@@ -45,4 +45,4 @@
         </div>
       </div>
   </div>
-</body>
+</div>
