--- a/src/app/recompense-moon/recompense-moon.component.html
+++ b/src/app/recompense-moon/recompense-moon.component.html
@@ -1,6 +1,6 @@
-<div id="" class="container-fluid pageSize no-gutters" >
-  <div id="" class="row">
-    <div class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture">
+<div class="container-fluid pageSize no-gutters" >
+  <div class="row">
+    <div id="bigImg" class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture" style="background-image:url(../../assets/lune1.jpg)">
     </div>
     <div class="col-12 col-sm-12 col-md-6 order-md-2 zoneText">
       <div class="row">
@@ -28,13 +28,13 @@
   <div class="row">
     <div class="  col-12 col-sm-12 col-md-6">
       <div class="row">
-        <div class="col-6 col-sm-6 col-md-3 minPicture thumb1">
+        <div class="col-6 col-sm-6 col-md-3 minPicture  thumb1"  onclick="changeImage(this);" style="background-image:url(../../assets/lune1.jpg)">
         </div>
-        <div class="col-6 col-sm-6 col-md-3 minPicture thumb2">
+        <div class="col-6 col-sm-6 col-md-3 minPicture thumb2" style="background-image:url(../../assets/lune2.jpg)">
         </div>  
-        <div class="col-6 col-sm-6 col-md-3 minPicture thumb3">
+        <div class="col-6 col-sm-6 col-md-3 minPicture thumb3" style="background-image:url(../../assets/lune3.gif)">
         </div> 
-        <div class="col-6 col-sm-6 col-md-3 minPicture thumb4">
+        <div class="col-6 col-sm-6 col-md-3 minPicture thumb4" style="background-image:url(../../assets/lune4.jpeg)">
         </div>
       </div>
       </div>
