--- a/src/app/recompense-moon/recompense-moon.component.html
+++ b/src/app/recompense-moon/recompense-moon.component.html
@@ -2,6 +2,12 @@
   <div class="row">
     <div id="bigImg" class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture" style="background-image:url(../../assets/lune1.jpg)">
     </div>
+    <div id="thumb2b" class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture hidden" style="background-image:url(../../assets/lune2.jpg)">
+    </div>
+    <div id="thumb3b" class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture hidden" style="background-image:url(../../assets/lune3.gif)">
+    </div>
+    <div id="thumb4b" class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture hidden" style="background-image:url(../../assets/lune4.jpeg)">
+    </div>
     <div class="col-12 col-sm-12 col-md-6 order-md-2 zoneText">
       <div class="row">
         <div class="offset-7 col-2 triangle"></div>
@@ -28,14 +34,14 @@
   <div class="row">
     <div class="  col-12 col-sm-12 col-md-6">
       <div class="row">
-        <div class="col-6 col-sm-6 col-md-3 minPicture  thumb1"  onclick="changeImage(this);" style="background-image:url(../../assets/lune1.jpg)">
-        </div>
-        <div class="col-6 col-sm-6 col-md-3 minPicture thumb2" style="background-image:url(../../assets/lune2.jpg)">
-        </div>  
-        <div class="col-6 col-sm-6 col-md-3 minPicture thumb3" style="background-image:url(../../assets/lune3.gif)">
-        </div> 
-        <div class="col-6 col-sm-6 col-md-3 minPicture thumb4" style="background-image:url(../../assets/lune4.jpeg)">
-        </div>
+        <button type="button" ng-click=displayPics() class="col-6 col-sm-3 col-md-3 minPicture" id="thumb1" style="background-image: url(../../assets/lune1.jpg);">
+        </button>
+        <button type="button" ng-click=displayPics() class="col-6 col-sm-3 col-md-3 minPicture" id="thumb2" style="background-image: url(../../assets/lune2.jpg);">
+        </button> 
+        <button type="button" ng-click=displayPics() class="col-6 col-sm-3 col-md-3 minPicture" id="thumb3" style="background-image: url(../../assets/lune3.gif);">
+        </button>
+        <button type="button" ng-click=displayPics() class="col-6 col-sm-3 col-md-3 minPicture" id="thumb4" style="background-image: url(../../assets/lune4.jpeg);">
+        </button>
       </div>
       </div>
       <div class="col-12 col-sm-12 col-md-6 zoneContinue">
