--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -18,6 +18,6 @@
             </div>
         </div>
     </div>
-    <div id="welcomePage-image-container" class="welcomePage-image-container1 welcomePage-image-container1-1">
+    <div id="welcomePage-image-container" class="welcomePage-image-container1">
     </div>
 </div>
