--- a/src/app/recompense-moon/recompense-moon.component.html
+++ b/src/app/recompense-moon/recompense-moon.component.html
@@ -6,7 +6,7 @@
     </div>
     <div id="thumb3b" class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture hidden" style="background-image:url(../../assets/lune3.gif)">
     </div>
-    <div id="thumb4b" class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture hidden" style="background-image:url(../../assets/lune4.jpeg)">
+    <div id="thumb4b" class="col-12 col-sm-12 col-md-6  order-md-1 order-md-2 order-sm-1 order-1 bigPicture hidden" style="background-image:url(../../assets/lune6.jpg)">
     </div>
     <div class="col-12 col-sm-12 col-md-6 order-md-2 zoneText">
       <div class="row">
@@ -40,7 +40,7 @@
         </button> 
         <button type="button" ng-click=displayPics() class="col-6 col-sm-3 col-md-3 minPicture" id="thumb3" style="background-image: url(../../assets/lune3.gif);">
         </button>
-        <button type="button" ng-click=displayPics() class="col-6 col-sm-3 col-md-3 minPicture" id="thumb4" style="background-image: url(../../assets/lune4.jpeg);">
+        <button type="button" ng-click=displayPics() class="col-6 col-sm-3 col-md-3 minPicture" id="thumb4" style="background-image: url(../../assets/lune6.jpg);">
         </button>
       </div>
       </div>
