--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<router-outlet></router-outlet>
+<div class="container-fluid no-gutters">
+    <div class="row">
+        <div class ="col-menu position-absolute"><app-menu></app-menu></div>
+     <div class ="col-page"><router-outlet></router-outlet></div>
+    </div>
+</div>
 
