--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,35 @@
 .col-menu {
-    width: 5VH;
+    position:fixed;
+    z-index: 1;
+    width: 40vh;
+    top: 0;
+    left:2vh;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
     height: 100vh;
-    /* position:absolute; */
-    background-color: rgb(255,255,255,0.1);
-    /* background-color:rgb(26,26,26);  */
-    
-    left:0;
+    background-color: rgb(255,255,255,0)
+}
+.col-menu2 {
+    position:fixed;
+    z-index: 1;
+    width: 40vh;
+    top: 0;
+    left:2vh;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+    height: 100vh;
+    background-color: rgb(26,26,26)
 }
 .col-page {
     width: 100%;
     height: 100%;
 }
+/* .col-menu-extended {
+    position:fixed;
+    z-index: 1;
+    background-color: rgb(255,255,255,0);
+    top: 0;
+    left:5vh;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    /* padding-top: 20px;
+} */ 
