--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="container-fluid no-gutters">
     <div class="row">
-        <div class ="col-menu position-absolute"><app-menu></app-menu></div>
-     <div class ="col-page"><router-outlet></router-outlet></div>
+        <div id="col-menu" class ="col-menu" ><app-menu></app-menu></div>
+
+        <div class ="col-page"><router-outlet></router-outlet></div>
     </div>
 </div>
 
