--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,20 +1,21 @@
-<!-- <div class="container-fluid column no-gutters bar-background"></div>
-  <div class="row col-12">
-    -->
-     <div class=" " ></div> 
-     <button type="button" ng-click=displayPics() class="col-12 icone" id="thumb1" style="background-image: url(../assets/Burger.png);">
-     </button>
+
+     <div class="font-subtitle" ></div> 
+     <div><button type="button" ng-click=displayPics()  id="burger" class="icone" style="background-image: url(../assets/Burger.png);">
+     </button></div>
+     <div><button type="button" ng-click=displayPics()  id="burger2" class="icone hidden" style="background-image: url(../assets/Burger.png);">
+     </button></div>
      <div class="col-12 icone">
      </div>
-     <button type="button" ng-click=displayPics() class="col-12 icone" id="thumb1" style="background-image: url(../assets/connexion.png);">
-     </button>
-     <button type="button" ng-click=displayPics() class="col-12 icone" id="thumb2" style="background-image: url(../../assets/Sattelite.png);">
-     </button> 
-     <button type="button" ng-click=displayPics() class="col-12 icone" id="thumb3" style="background-image: url(../../assets/Tableau.png);">
-     </button>
-     <button type="button" ng-click=displayPics() class="col-12 icone" id="thumb4" style="background-image: url(../../assets/Sattelite2.png);">
-     </button>
+     <div><button type="button" ng-click=displayPics() id="connexion" class="icone hidden" style="background-image: url(../assets/connexion.png);">
+        <a class="lienNavBar nav-a" href=""><strong>CONNECTION</strong></a>
+     </button></div>
+     <div><button type="button" ng-click=displayPics() id="sattelite"  class="icone hidden" style="background-image: url(../../assets/Sattelite.png);">
+        <a class="lienNavBar nav-a" href=""><strong>EXPLORATION</strong></a>
+     </button></div> 
+     <div><button type="button" ng-click=displayPics() id="tableau"  class="icone hidden" style="background-image: url(../../assets/Tableau.png);">
+        <a class="lienNavBar nav-a" href=""><form style="" ><strong>TABLEAU DE BORD</strong></form></a>
+     </button></div>
+     <div><button type="button" ng-click=displayPics() id="sattelite2"  class="icone hidden" style="background-image: url(../../assets/Sattelite2.png);">
+        <a class="lienNavBar nav-a" href=""><form style="display: inline-block;" ><strong>MON SATELLITE</strong></form></a>
+     </button></div>
    
-    <!-- </div>
-  </div>
-   -->
