--- a/src/app/niveau1-page/niveau1-page.component.html
+++ b/src/app/niveau1-page/niveau1-page.component.html
@@ -34,6 +34,5 @@
             </div>
     </div>
 </div>
-<!-- <a href="#/home" class="active">Home</a> -->
-<router-outlet id = "lune" class="active"></router-outlet> 
-<!-- <app-recompense-moon id ="recompenseLune" class="hidden"></app-recompense-moon> -->
+
+<router-outlet id = "lune"></router-outlet> 
