--- a/src/app/recompense-moon/recompense-moon.component.css
+++ b/src/app/recompense-moon/recompense-moon.component.css
@@ -9,7 +9,8 @@
     height:20vh;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;   
+    background-size: cover;
+    cursor: pointer;   
 }
 .pageSize {
     width: 100%;
@@ -42,21 +43,6 @@
     background-position: center;
     background-size: cover;  
 }
-/* .thumb1{
-    background-image: url(../../assets/lune1.jpg); 
-}
-.thumb2{
-    background-image: url(../../assets/lune2.jpg); 
-}
-.thumb3{
-    background-image: url(../../assets/lune3.gif); 
-}
-.thumb4{
-    background-image: url(../../assets/lune4.jpeg); 
-} */
-
-/* polices */
-
 .continueArrow{
     font-size: 1.7rem;
 }
