--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,35 +1,28 @@
 .col-menu {
     position:fixed;
     z-index: 1;
-    width: 40vh;
+    width: 30vh;
     top: 0;
-    left:2vh;
+    left:0;
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    height: 100vh;
+    height: 40vh;
     background-color: rgb(255,255,255,0)
 }
-.col-menu2 {
-    position:fixed;
-    z-index: 1;
-    width: 40vh;
-    top: 0;
-    left:2vh;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    height: 100vh;
-    background-color: rgb(26,26,26)
-}
+
 .col-page {
     width: 100%;
     height: 100%;
 }
-/* .col-menu-extended {
-    position:fixed;
-    z-index: 1;
-    background-color: rgb(255,255,255,0);
-    top: 0;
-    left:5vh;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    /* padding-top: 20px;
-} */ 
+
+@media screen and (max-width:720px){
+    .col-menu {
+      
+        z-index: 1;
+        width: 100vh;
+        top: 0;
+        left:0;
+        overflow-x: hidden; /* Disable horizontal scroll */
+        height: 40vh;
+        background-color: rgb(255,255,255,0)
+    }
+}
