--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 
-     <div class="font-subtitle" ></div> 
+     <div id="bigMenu" class="font-subtitle" >
      <div><button type="button" ng-click=displayPics()  id="burger" class="icone" style="background-image: url(../assets/Burger.png);">
      </button></div>
      <div><button type="button" ng-click=displayPics()  id="burger2" class="icone hidden" style="background-image: url(../assets/Burger.png);">
@@ -7,15 +7,15 @@
      <div class="col-12 icone">
      </div>
      <div><button type="button" ng-click=displayPics() id="connexion" class="icone hidden" style="background-image: url(../assets/connexion.png);">
-        <a class="lienNavBar nav-a" href=""><strong>CONNECTION</strong></a>
+        <a routerLink="welcome-page" class="lienNavBar nav-a" href=""><strong>CONNECTION</strong></a>
      </button></div>
      <div><button type="button" ng-click=displayPics() id="sattelite"  class="icone hidden" style="background-image: url(../../assets/Sattelite.png);">
-        <a class="lienNavBar nav-a" href=""><strong>EXPLORATION</strong></a>
+        <a routerLink="tours" class="lienNavBar nav-a" href=""><strong>EXPLORATION</strong></a>
      </button></div> 
      <div><button type="button" ng-click=displayPics() id="tableau"  class="icone hidden" style="background-image: url(../../assets/Tableau.png);">
-        <a class="lienNavBar nav-a" href=""><form style="" ><strong>TABLEAU DE BORD</strong></form></a>
+        <a routerLink="tableau-de-bord" class="lienNavBar nav-a" href=""><form><strong>TABLEAU DE BORD</strong></form></a>
      </button></div>
      <div><button type="button" ng-click=displayPics() id="sattelite2"  class="icone hidden" style="background-image: url(../../assets/Sattelite2.png);">
-        <a class="lienNavBar nav-a" href=""><form style="display: inline-block;" ><strong>MON SATELLITE</strong></form></a>
+        <a routerLink="pimp-my-satellite" class="lienNavBar nav-a" href=""><form><strong>MON SATELLITE</strong></form></a>
      </button></div>
-   
+    </div> 
