--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,23 +1,50 @@
+.all-pages-container {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 100%;
+}
+.all-pages-menu {
+    position:fixed;
+}
+.all-pages-pages {
+    width: 100%; 
+}
+
+
 .col-menu {
     position:fixed;
-    z-index: 1;
     width: 30vh;
     top: 0;
     left:0;
     overflow-x: hidden; /* Disable horizontal scroll */
-    height: 40vh;
+    height: 100vh;
     background-color: rgb(255,255,255,0)
 }
-
+.icone{
+    height: 5vh;
+    width: 5vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: rgb(255,255,255,0);
+    border: 0px;
+    cursor: pointer;    
+}
+#burger{
+    padding-left: 2vh;
+    padding-top:3vh;
+    position:fixed;
+    background-color: rgb(255,255,255,0)
+}
 .col-page {
     width: 100%;
     height: 100%;
+    z-index: 1;
 }
-
+    
 @media screen and (max-width:720px){
     .col-menu {
-      
-        z-index: 1;
         width: 100vh;
         top: 0;
         left:0;
