--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid no-gutters">
-    <div class="row">
-        <div id="col-menu" class ="col-menu" ><app-menu></app-menu></div>
+<div class=" no-gutters">
+    <div class="all-pages-container">
+        <div class="all-pages-menu"><app-menu></app-menu></div>
 
-        <div class ="col-page"><router-outlet></router-outlet></div>
+        <div class="all-pages-pages"><router-outlet></router-outlet></div>
     </div>
 </div>
 
