--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,8 +1,8 @@
 
      <div id="bigMenu" class="font-subtitle" >
-     <div><button type="button" ng-click=displayPics()  id="burger" class="icone" style="background-image: url(../assets/Burger.png);">
+     <div><button type="button" ng-click=displayPics()  id="burger" class="icone" style="background-image: url(../assets/Logo.png);">
      </button></div>
-     <div><button type="button" ng-click=displayPics()  id="burger2" class="icone hidden" style="background-image: url(../assets/Burger.png);">
+     <div><button type="button" ng-click=displayPics()  id="burger2" class="icone hidden" style="background-image: url(../assets/Logo.png);">
      </button></div>
      <div class="col-12 icone">
      </div>
@@ -13,9 +13,9 @@
         <a routerLink="tours" class="lienNavBar nav-a" href=""><strong>EXPLORATION</strong></a>
      </button></div> 
      <div><button type="button" ng-click=displayPics() id="tableau"  class="icone hidden" style="background-image: url(../../assets/Tableau.png);">
-        <a routerLink="tableau-de-bord" class="lienNavBar nav-a" href=""><form><strong>TABLEAU DE BORD</strong></form></a>
+        <a routerLink="tableau-de-bord" class="lienNavBar nav-a" href=""><form><strong>DASHBORD</strong></form></a>
      </button></div>
      <div><button type="button" ng-click=displayPics() id="sattelite2"  class="icone hidden" style="background-image: url(../../assets/Sattelite2.png);">
-        <a routerLink="pimp-my-satellite" class="lienNavBar nav-a" href=""><form><strong>MON SATELLITE</strong></form></a>
+        <a routerLink="pimp-my-satellite" class="lienNavBar nav-a" href=""><form><strong>MY SATELLITE</strong></form></a>
      </button></div>
     </div> 
