--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,13 +11,13 @@
     width: 100%; 
 }
 
-
+/* 
 .col-menu {
     position:fixed;
     width: 30vh;
     top: 0;
     left:0;
-    overflow-x: hidden; /* Disable horizontal scroll */
+    overflow-x: hidden;
     height: 100vh;
     background-color: rgb(255,255,255,0)
 }
@@ -36,20 +36,20 @@
     padding-top:3vh;
     position:fixed;
     background-color: rgb(255,255,255,0)
-}
-.col-page {
+} */
+/* .col-page {
     width: 100%;
     height: 100%;
     z-index: 1;
-}
-    
+} */
+/*     
 @media screen and (max-width:720px){
     .col-menu {
         width: 100vh;
         top: 0;
         left:0;
-        overflow-x: hidden; /* Disable horizontal scroll */
+        overflow-x: hidden;
         height: 40vh;
         background-color: rgb(255,255,255,0)
     }
-}
+} */
