--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,31 +1,31 @@
 
-    <div>
-        <button type="button" (click)="showMenu()"  id="burger" class="icone" style="background-image: url(../assets/Burger.png);"></button>
+    <div id="logo" class="">
+        <button type="button" (click)="showMenu()"  id="burger" class="icone nav-a" style="background-image: url(../assets/Burger.png);"></button>
     </div>
-    <div>
+    <!-- <div>
         <button type="button" ng-click=displayPics()  id="burger2" class="icone hidden" style="background-image: url(../assets/Burger.png);"></button>
-    </div>
+    </div> -->
 
-     <div id="bigMenu" class="font-subtitle " >
+     <div id="bigMenu" class="font-subtitle bigMenu hidden" >
         <div class="col-12 icone">
         </div>
         <div>
-            <button type="button" ng-click=displayPics() id="connexion" class="icone hidden" style="background-image: url(../assets/connexion.png);">
+            <button type="button" ng-click=displayPics() id="connexion" class="icone" style="background-image: url(../assets/connexion.png);">
                 <a routerLink="welcome-page" class="lienNavBar nav-a" href=""><strong>CONNECTION</strong></a>
             </button>
         </div>
         <div>
-            <button type="button" ng-click=displayPics() id="sattelite"  class="icone hidden" style="background-image: url(../../assets/Sattelite.png);">
+            <button type="button" ng-click=displayPics() id="sattelite"  class="icone" style="background-image: url(../../assets/Sattelite.png);">
                 <a routerLink="tours" class="lienNavBar nav-a" href=""><strong>EXPLORATION</strong></a>
             </button>
         </div> 
         <div>
-            <button type="button" ng-click=displayPics() id="tableau"  class="icone hidden" style="background-image: url(../../assets/Tableau.png);">
+            <button type="button" ng-click=displayPics() id="tableau"  class="icone" style="background-image: url(../../assets/Tableau.png);">
                 <a routerLink="tableau-de-bord" class="lienNavBar nav-a" href=""><form><strong>TABLEAU DE BORD</strong></form></a>
             </button>
         </div>
         <div>
-            <button type="button" ng-click=displayPics() id="sattelite2"  class="icone hidden" style="background-image: url(../../assets/Sattelite2.png);">
+            <button type="button" ng-click=displayPics() id="sattelite2"  class="icone" style="background-image: url(../../assets/Sattelite2.png);">
                 <a routerLink="pimp-my-satellite" class="lienNavBar nav-a" href=""><form><strong>MON SATELLITE</strong></form></a>
             </button>
         </div>
