--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class=" no-gutters">
     <div class="all-pages-container">
-        <!-- <div class="all-pages-menu"><app-menu></app-menu></div> -->
+        <div class="all-pages-menu"><app-menu></app-menu></div>
 
         <div class="all-pages-pages"><router-outlet></router-outlet></div>
     </div>
