--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,7 +1,7 @@
 
 #burger {
     z-index:2;
-    margin-left: 2vh;
+    margin-left:2vh;
     margin-top:3vh; 
     position:fixed;  
     top: 0;
@@ -11,11 +11,9 @@
 .logo{
     background-color: rgb(26,26,26,0.9);  
     }
-/* .Underit {
-    z-index:0;
-} */
+    /* ajouté suite au clic sur le logo */
 .Onit{
-    z-index:6;
+    z-index:4;
     height:100vh;
     width: 40vh;
     background-color: rgb(26,26,26,0.9);
@@ -48,91 +46,14 @@
     text-align: left;  
 }
 
-/* .col-menu {
-    position:fixed;
-    width: 30vh;
-    top: 0;
-    left:0;
-    overflow-x: hidden;
-    height: 100vh;
-    background-color: rgb(255,255,255,0)
-} */
-/* .icone{
-    height: 5vh;
-    width: 5vh;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-color: rgb(255,255,255,0);
-    border: 0px;
-    cursor: pointer;    
-} */
-/* #burger{
-    padding-left: 2vh;
-    padding-top:3vh;
-    position:fixed;
-    background-color: rgb(255,255,255,0)
-} */
-
-
-
-
-/* #bigMenu{
-    padding-left: 2vh;
-    padding-top:3vh;
-   
-} */
-/* avant */
-/* .col-menu {
-    position:fix    position:fixed;
-    width: 30vh;
-    top: 0;
-    left:0;
-    overflow-x: hidden;
-    height: 100vh;
-    background-color: rgb(255,255,255,0)
-    width: 30vh;    position:fixed;
-    width: 30vh;
-    top: 0;
-    left:0;
-    overflow-x: hidden;
-    height: 100vh;
-    background-color: rgb(255,255,255,0)
-    top: 0;
-    left:0;
-    overflow-x: hidden;
-    height: 100vh;
-    background-color: rgb(255,255,255,0)
-} */
-/* .icone{
-    height: 5vh;
-    width: 5vh;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-color: rgb(255,255,255,0);
-    border: 0px;
-    cursor: pointer;    
-} */
-/* #burger{
-    padding-left: 2vh;
-    padding-top:3vh;
-    position:fixed;
-    background-color: rgb(255,255,255,0)
-} */
-/* .col-page {
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-} */
     
 @media screen and (max-width:720px){
-    .col-menu {
+    .Onit {
         width: 100vh;
         top: 0;
         left:0;
         overflow-x: hidden; /* Disable horizontal scroll */
-        height: 40vh;
-        background-color: rgb(255,255,255,0)
+        height: 100vh;
+        background-color: rgb(26,26,26,0.9); 
     }
 }
