--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,31 +1,30 @@
 
 #burger {
     z-index:2;
-    margin-left:2vh;
-    margin-top:3vh; 
+    margin-left:4vh;
+    margin-top:4vh; 
     position:fixed;  
     top: 0;
     left:0; 
     overflow-x: hidden;
 }
+   /* ajouté suite au clic sur le logo */
 .logo{
-    background-color: rgb(26,26,26,0.9);  
+    background-color: rgb(26,26,26,0.9); 
     }
-    /* ajouté suite au clic sur le logo */
+ 
 .Onit{
     z-index:4;
     height:100vh;
     width: 40vh;
     background-color: rgb(26,26,26,0.9);
-    transition-duration: 0.5s;
-    transition-timing-function:linear ;
-    transition-delay: 0s; 
     padding-top: 15vh; 
     padding-left:2vh; 
 }
+/* Pour tout les icones */
 .icone{
-    height: 5vh;
-    width: 5vh;
+    height: 7vh;
+    width: 7vh;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -35,9 +34,7 @@
     border: none;
     outline: none;;   
 }
-.nav-a, .nav-a:visited, .nav-a:hover, .nav-a:focus, .nav-a:active  { 
-	text-decoration:none; 
-}
+/* Coloration des titres des liens */
 .lienNavBar {
     color: #FFD45C;
     padding-left: 7vh;
@@ -45,8 +42,12 @@
     display: inline-block;
     text-align: left;  
 }
+#burger, .Onit{
+    transition: 1s;
+    position: fixed;  
+}
 
-    
+    /*Responsive pleine page version portable  */
 @media screen and (max-width:720px){
     .Onit {
         width: 100vh;
@@ -54,6 +55,19 @@
         left:0;
         overflow-x: hidden; /* Disable horizontal scroll */
         height: 100vh;
-        background-color: rgb(26,26,26,0.9); 
+        background-color: rgb(26,26,26); 
+    }
+    .icone{
+        height: 10.5vh;
+        width: 10vh;     
+        }
+    .lienNavBar {
+        color: #FFD45C;
+        padding-left: 16vh;
+        width: 100vh;
+        display: inline-block;        
+    }
+    strong {
+        font-size: 2vh;
     }
 }
