--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,6 @@ html, body {
     margin-right: 0;
     margin-left: 0;
 }
+.nav-a, .nav-a:visited, .nav-a:hover, .nav-a:focus, .nav-a:active  { 
+	text-decoration:none; 
+}
