--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,6 @@
     <div class="all-pages-container">
         <div class="all-pages-menu"><app-menu></app-menu></div>
 
-        <div class="all-pages-pages"><router-outlet></router-outlet></div>
+        <div class="all-pages-pages" onClick="MenuComponent.reload()"><router-outlet></router-outlet></div>
     </div>
 </div>
-
