--- a/src/app/connect-form/connect-form.component.html
+++ b/src/app/connect-form/connect-form.component.html
@@ -18,7 +18,7 @@
         <label class="font-subtitle" for="password">Launching code</label>
         <input id="Launching-code" type="password" id="Password" placeholder="Password" autocomplete="off"/>
     </div>
-    <button class="welcomePage-Forms-button font-subtitle">Launching</button>
+    <button id="welcomePage-Forms-button-launching" class="welcomePage-Forms-button font-subtitle" [routerLink]="['/niveau1']">Launching</button>
   </div>
   <!-- Connection / Form -->
   <div class="welcomePage-Forms-Connection welcomePage-Forms hidden">
@@ -30,6 +30,6 @@
           <label class="font-subtitle" for="password">Launching code</label>
           <input type="password" id="Password" placeholder="Password" autocomplete="off"/>
       </div>
-      <button class="welcomePage-Forms-button font-subtitle">Explore</button>
+      <button class="welcomePage-Forms-button font-subtitle" [routerLink]="['/niveau1']">Explore</button>
     </div>
 </div>
