--- a/src/app/niveau1-page/niveau1-page.component.html
+++ b/src/app/niveau1-page/niveau1-page.component.html
@@ -12,13 +12,13 @@
                     </div> 
                     <div id="boutons-reponses" class="col-12 col-md-12 col-lg-12"> 
                         <div class="col-12 col-md-12 col-lg-6 offset-lg-3 d-flex justify-content-center mb-3">
-                            <button type="button" class="btn bgcolor d-flex justify-content-center btn-block font-weight-bold fontbuttonsize font-subtitle">LOUIS AMSTRONG</button>
+                            <button type="button" class="btn bgcolor d-flex justify-content-center btn-block font-weight-bold fontbuttonsize font-subtitle" [routerLink]="['/loser']">LOUIS AMSTRONG</button>
                         </div>
                         <div class="col-12 col-md-12 col-lg-6 offset-lg-3 d-flex justify-content-center mb-3">
                                 <button type="button" id="bonne-reponse" class="btn bgcolor d-flex justify-content-center btn-block font-weight-bold fontbuttonsize font-subtitle">NEIL AMSTRONG</button>
                         </div>
                         <div class="col-12 col-md-12 col-lg-6 offset-lg-3 d-flex justify-content-center pb-0">
-                                <button type="button" class="btn bgcolor d-flex justify-content-center btn-block font-weight-bold fontbuttonsize font-subtitle">LANCE AMSTRONG</button>
+                                <button type="button" class="btn bgcolor d-flex justify-content-center btn-block font-weight-bold fontbuttonsize font-subtitle" [routerLink]="['/loser']">LANCE AMSTRONG</button>
                         </div> 
                     </div>
                     <div id="AfficherReponse" class="col-12 col-md-12 hidden">
